--- a/refactoredProject/public/Contents/licitationForm.html
+++ b/refactoredProject/public/Contents/licitationForm.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Licitation Form</title>
-    <link rel="stylesheet" href="/Contents/css/review.css">
+    <link rel="stylesheet" href="/Contents/css/licitationForm.css">
     <link rel="icon" type="image/x-icon" href="/Contents/css/images/favicon.ico">
 </head>
 <body>
@@ -41,6 +41,86 @@
                         <input type="date" id="endDate" name="end_date" required>
                     </div>
                     <button type="submit">Submit Offer</button>
+                </form>
+            </div>
+        </div>
+        <div class="footer">
+            <p>Copyright &copy; Team PlaCo</p>
+        </div>
+    </div>
+    <script src="/Contents/scripts/submitOffer.js"></script>
+</body>
+</html> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Licitation Form</title>
+    <link rel="stylesheet" href="/Contents/css/licitationForm.css">
+    <link rel="icon" type="image/x-icon" href="/Contents/css/images/favicon.ico">
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <nav class="menu">
+                <ul>
+                    <li><a href="myacc">My Account</a></li>
+                    <li><a href="about">About</a></li>
+                </ul>
+                <div class="menu-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </nav>
+            <a href="afterlog" class="titlu">Pla<div class="cletter">c<div class="image"></div></div><span class="oletter">o</span></a>
+        </div>
+        <div class="middle">
+            <div class="content">
+                <h2>Submit Your Offer</h2>
+                <form id="licitationForm">
+                    <input type="hidden" id="phaseId" name="phase_id">
+                    <div class="form-group">
+                        <label for="price">Price:</label>
+                        <input type="number" id="price" name="price" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="startDate">Start Date:</label>
+                        <input type="date" id="startDate" name="start_date" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="endDate">End Date:</label>
+                        <input type="date" id="endDate" name="end_date" required>
+                    </div>
+                    <button type="submit" class="btn">Submit Offer</button>
                 </form>
             </div>
         </div>
