--- a/refactoredProject/public/Contents/admin.html
+++ b/refactoredProject/public/Contents/admin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reviews Management Page</title>
-    <link rel="stylesheet" href="/Contents/css/review.css">
+    <link rel="stylesheet" href="/Contents/css/admin.css">
     <link rel="icon" type="image/x-icon" href="/Contents/css/images/favicon.ico">
 </head>
 
