--- a/refactoredProject/public/Contents/company.html
+++ b/refactoredProject/public/Contents/company.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Company Details</title>
-    <link rel="stylesheet" href="/Contents/css/afterlog.css">
+    <link rel="stylesheet" href="/Contents/css/company.css">    
+    <link rel="icon" type="image/x-icon" href="/Contents/css/images/favicon.ico">
+
 </head>
 
 <body>
