--- a/refactoredProject/public/Contents/licitations.html
+++ b/refactoredProject/public/Contents/licitations.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Licitation Page</title>
-    <link rel="stylesheet" href="/Contents/css/review.css">
+    <link rel="stylesheet" href="/Contents/css/licitation.css">
     <link rel="icon" type="image/x-icon" href="/Contents/css/images/favicon.ico">
 </head>
 <body>
@@ -26,7 +26,7 @@
         <div class="middle">
             <div class="content">
                 <div class="licitations">
-                    <h2>Available Licitations:</h2>
+                    <h1>Available Licitations:</h1>
                     <div id="licitationList">
                         <!-- Licitation items will be added dynamically here -->
                     </div>
