--- a/refactoredProject/public/Contents/reset-password.html
+++ b/refactoredProject/public/Contents/reset-password.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Password</title>
     <link rel="stylesheet" href="/Contents/css/resetPassword.css">
+    <link rel="icon" type="image/x-icon" href="/Contents/css/images/favicon.ico">
+
 </head>
 
 <body>
